--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
               <li class="col-desk-1 col-tab-1 col-mob-4">
                 <a href="blog">{%if tx.menu.blog != ""%}{{ tx.menu.blog }}{%else%}{{ txEn.menu.blog }}{%endif%}</a></li>
               <li class="col-desk-1 col-tab-1 col-mob-4">
-                <a href="https://support.delta.chat">{%if tx.menu.forum != ""%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a>
+                <a href="https://support.delta.chat" target="_blank">{%if tx.menu.forum != ""%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a>
               </li>
               <li class="col-desk-1 col-tab-1 col-mob-4">
                 <a href="contribute">{%if tx.menu.contribute != ""%}{{ tx.menu.contribute }}{%else%}{{ txEn.menu.contribute }}{%endif%}</a>
