--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,10 @@
     <meta name="keywords" content="{%if tx.meta.keywords != ""%}{{ tx.meta.keywords }}{%else%}{{ txEn.meta.keywords }}{%endif%}" />
 
     <link rel="stylesheet" href="../assets/css/styles.css" type="text/css" />
+    {% assign contr = page.lang | append: "/contribute.md" %}
+    {% if page.path == contr %}
     <link rel="stylesheet" href="../assets/css/font-awesome.min.css">
+    {% endif %}
     <link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="{%if tx.rss_news_title != ""%}{{ tx.rss_news_title }}{%else%}{{ txEn.rss_news_title }}{%endif%}" />
   </head>
 
