--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,25 +29,26 @@
       <div id="menu">
         <div class="grid">
           <div id="menu-inner" class="col-desk-12 col-tab-12 col-mob-4">
-            <div class="logo col-desk-6 col-tab-6 col-mob-4">
+            <div class="logo col-desk-6 col-tab-6 col-mob-3">
               <a href="../{{page.lang}}/">
                 <img src="../assets/logos/delta-transparent.svg" width="40" />
                 <div class="text"><strong>delta</strong>.chat</div>
               </a>
             </div>
-            <ul class="nav col-desk-6 col-tab-6 col-mob-4">
-              <li class="col-desk-1 col-tab-1 col-mob-4">
+            <div class="nav col-desk-6 col-tab-6 col-mob-1">
+            <ul>
+              <li class="col-desk-1 col-tab-1 col-mob-shift-3 col-mob-1">
                 <a href="blog">{%if tx.menu.blog != ""%}{{ tx.menu.blog }}{%else%}{{ txEn.menu.blog }}{%endif%}</a></li>
-              <li class="col-desk-1 col-tab-1 col-mob-4">
+              <li class="col-desk-1 col-tab-1 col-mob-shift-3 col-mob-1">
                 <a href="contribute">{%if tx.menu.contribute != ""%}{{ tx.menu.contribute }}{%else%}{{ txEn.menu.contribute }}{%endif%}</a>
               </li>
-              <li class="col-desk-1 col-tab-1 col-mob-4">
+              <li class="col-desk-1 col-tab-1 col-mob-shift-3 col-mob-1">
                 <a href="help">{%if tx.menu.help != ""%}{{ tx.menu.help }}{%else%}{{ txEn.menu.help }}{%endif%}</a>
               </li>
-              <li class="col-desk-1 col-tab-1 col-mob-4">
+              <li class="col-desk-1 col-tab-1 col-mob-shift-3 col-mob-1">
                 <a href="https://support.delta.chat" target="_blank">{%if tx.menu.forum != ""%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a>
               </li>
-              <li class="call-to-action col-desk-1 col-tab-1 col-mob-4">
+              <li class="call-to-action col-desk-1 col-tab-1 col-mob-shift-3 col-mob-1">
                 <a href="download">{%if tx.menu.download != ""%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</a>
               </li>
             </ul>
