replace Friendica with Mastodon, add social links to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,8 @@
 <span class="desktoponly">{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
 {% include footer-languages.html %}
 <br>
+Subscribe to our feed: {% include subscribe-to-feed-links.html %}
+<br>
 © 2020 Delta Chat contributors
 </p>
 </div>
