--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -191,10 +191,10 @@ pre, blockquote { padding: 0.5em 1em; }
   background: url(feed-icon.png) no-repeat 0 50%;
 }
 
-.friendica {
+.mastodon {
   margin-left: 9px;
   padding: 0 0 0 21px;
-  background: url(friendica-icon.png) no-repeat 0 50%;
+  background: url(mastodon-icon.png) no-repeat 0 50%;
 }
 
 .twitter {
