--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
 <span class="desktoponly">{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
 {% include footer-languages.html %}
 <br>
-Subscribe to our feed: {% include subscribe-to-feed-links.html %}
+{% include subscribe-to-feed-links.html %}
 <br>
 © 2020 Delta Chat contributors
 </p>
