--- a/_includes/subscribe-to-feed-links.html
+++ b/_includes/subscribe-to-feed-links.html
@@ -1,4 +1,4 @@
 <a href="../feed.xml" class="feed">RSS-Feed</a>
 <a rel="me" href="https://chaos.social/@delta" class="mastodon">Mastodon</a>
-<a href="https://twitter.com/delta_chat" class="twitter">Twitter @delta_chat</a>
+<a href="https://twitter.com/delta_chat" class="twitter">Twitter</a>
 
