add links to the stores and upgrade the download version to 1.4.3

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -1,6 +1,6 @@
 {% assign txEn = site.data.lang['en']['en'] %}
 {% assign tx = site.data.lang[page.lang][page.lang] %}
-{% assign VERSION_DESKTOP = "1.3.4" %}
+{% assign VERSION_DESKTOP = "1.4.3" %}
 
 <div class="download-content">
     <div id="recommendation-section" hidden>
@@ -45,6 +45,9 @@
         <div class="box" id="macos">
             <div class="title">macOS</div>
             <div class="buttons">
+                <a href="https://apps.apple.com/us/app/delta-chat-desktop/id1462750497" class="img-badge">
+                    <img src="../assets/badges/mac-appstore.svg" alt="{%if tx.download.dl_mac_appstore != ""%}{{ tx.download.dl_mac_appstore }}{%else%}{{ txEn.download.dl_mac_appstore }}{%endif%}" />
+                </a>
                 <a href="https://download.delta.chat/desktop/v{{VERSION_DESKTOP}}/DeltaChat-{{VERSION_DESKTOP}}.dmg" class="img-badge">
                     <img src="../assets/badges/get-it-on-macos.png" alt="Get it on macOS" />
                 </a>
@@ -56,6 +59,9 @@
         <div class="box" id="windows">
             <div class="title">Windows</div>
             <div class="buttons">
+                <a href="https://www.microsoft.com/en-us/p/deltachat/9pjtxx7hn3pk?activetab=pivot:overviewtab" class="img-badge">
+                    <img src="../assets/badges/microsoft.svg" alt="{%if tx.download.dl_microsoft != ""%}{{ tx.download.dl_microsoft }}{%else%}{{ txEn.download.dl_microsoft }}{%endif%}" />
+                </a>
                 <a href="https://download.delta.chat/desktop/v{{VERSION_DESKTOP}}/DeltaChat%20Setup%20{{VERSION_DESKTOP}}.exe" class="img-badge">
                     <img src="../assets/badges/get-it-on-windows.png" alt="Get it on Windows" />
                 </a>
