--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -4,9 +4,10 @@
 <a href="../es/">ES</a>  |
 <a href="../fr/">FR</a>  |
 <a href="../it/">IT</a>  |
+<a href="../nl/">NL</a>  |
 <a href="../pl/">PL</a>  |
 <a href="../pt/">PT</a>  |
 <a href="../ru/">RU</a>  |
 <a href="../sq/">SQ</a>  |
-<a href="../nl/">NL</a>  |
+<a href="../tr/">TR</a>  |
 <a href="../uk/">UK</a>
