add Indonesian website

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -3,6 +3,7 @@
 <a href="../en/">EN</a>  |
 <a href="../es/">ES</a>  |
 <a href="../fr/">FR</a>  |
+<a href="../id/">ID</a>  |
 <a href="../it/">IT</a>  |
 <a href="../nl/">NL</a>  |
 <a href="../pl/">PL</a>  |
