add Chinese website

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -11,4 +11,5 @@
 <a href="../ru/">RU</a>  |
 <a href="../sq/">SQ</a>  |
 <a href="../tr/">TR</a>  |
-<a href="../uk/">UK</a>
+<a href="../uk/">UK</a>  |
+<a href="../zh_CN/">zh_CN</a>
