update homebrew command see https://github.com/deltachat/deltachat-desktop/issues/2112

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -54,7 +54,7 @@
             <div class="descr">
                 <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
                 <br />
-                Homebrew manual install: <code>brew cask install deltachat</code>
+                Homebrew manual install: <code>brew install --cask deltachat</code>
             </div>
         </div>
         <div class="box" id="windows">
