add Czech website and local help

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -1,4 +1,5 @@
 <a href="../ca/">CA</a>  |
+<a href="../cs/">CS</a>  |
 <a href="../de/">DE</a>  |
 <a href="../en/">EN</a>  |
 <a href="../es/">ES</a>  |
