added overflow-x: scroll to code

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -175,7 +175,7 @@ a:hover {
     text-decoration: underline;	
 }
 
-code, pre, blockquote { background-color: #eee; }
+code, pre, blockquote { background-color: #eee; overflow-x: scroll;}
 pre, blockquote { padding: 0.5em 1em; }
 
 
