add sk language build config

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -11,6 +11,7 @@
 <a href="../pl/">PL</a>  |
 <a href="../pt/">PT</a>  |
 <a href="../ru/">RU</a>  |
+<a href="../sk/">SK</a>  |
 <a href="../sq/">SQ</a>  |
 <a href="../tr/">TR</a>  |
 <a href="../uk/">UK</a>  |
