fix color contrast in footer links

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -56,11 +56,11 @@ body {
     margin: 1.5em 0 2.5em 0;
     border-top: 1px solid #BBB;
     padding: 1em;
-    color: #AAA;
+    color: #757575;
     text-align: center;
 }
 #footer a, #footer a:visited {
-    color: #AAA;
+    color: #757575;
 }
 
 .featured-image {
