--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,3 +1,11 @@
 ---
 ---
 @import "main";
+
+.download {
+	border: 1px solid black;
+	border-radius: 5px;
+	padding: 10px;
+	color: black;
+	font-weight: bold;
+}
