use another name as /apk* results in a redirect by some old code

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -21,7 +21,7 @@
                     <img src="../assets/badges/get-it-on-fdroid.png" alt="{%if tx.download.dl_fdroid != ""%}{{ tx.download.dl_fdroid }}{%else%}{{ txEn.download.dl_fdroid }}{%endif%}" />
                 </a>
                 <a href="https://www.apklis.cu/application/chat.delta" class="img-badge">
-                    <img src="../assets/badges/apklis.png" alt="Disponible en Apklis"  />
+                    <img src="../assets/badges/get-it-on-apklis.png" alt="Disponible en Apklis"  />
                 </a>
                 <a href="https://www.amazon.com/dp/B0864PKVW3/" class="img-badge">
                     <img src="../assets/badges/amazon-appstore.png" alt="Available at Amazon Appstore" />
