--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,12 +16,18 @@ body {
 #menu {
     text-align: center;
     margin-bottom: 1em;
-    padding: 1em 0 1em 0;
+    padding: 8px 5px;
     background-color: #159957;
     background-image: linear-gradient(120deg, #77888f, #364e59);
-
 }
 	
+#menu ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+    
 #menu li {
     display: inline-block;
     padding-right: 0.5em;
@@ -86,7 +92,7 @@ body {
         padding-top: 0px;
     }
     #menu {
-        padding: 1.2em 1em 1.2em 1em;
+        padding: 5px 0;
     }
     #menu li {
         padding-right: 1.0em;
