--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -14,8 +14,12 @@
 	content: unset;
 }
 
+:root {
+	--emoji-size: 40px;
+}
+
 .home-emoji {
-	font-size: 40px;
+	font-size: var(--emoji-size);
 	padding: 10px;
 }
 
@@ -24,7 +28,7 @@ sibling selectors are used here to select
 the first, second, and third p after .home-features */
 .home-features + p, .home-features + p + p, , .home-features + p + p + p {
 	display: block;
-	min-height: 40px;
+	min-height: var(--emoji-size);
 
 	span {
 		float: left;
