Use !important for cta-button color

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -10,7 +10,7 @@
 	margin: 10px 0;
 
 	background: linear-gradient(120deg, #77888f, #364e59);
-	color: white;
+	color: white !important;
 	font-weight: bold;
 }
 
