Set .cta-button:visited color

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2,7 +2,7 @@
 ---
 @import "main";
 
-.cta-button, .cta-button:hover {
+.cta-button, .cta-button:hover, .cta-button:visited {
 	border: 1.5px solid #a4c2d0;
 	border-radius: 5px;
 	padding: 10px;
