Set font family in case of fallback failures

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -162,7 +162,7 @@ body {
 }
 
 #menu, h1, h2, h3, h4, h5, h6 {
-    font-family: Tahoma;
+    font-family: Tahoma, sans-serif;
 }
 
 #content ul, ol { margin-left: 1.5em; }
