Add donate link to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,7 @@
 <p>
     <a href="references">{%if tx.references != ""%}{{ tx.references }}{%else%}{{ txEn.references }}{%endif%}</a>
     | <a href="https://github.com/deltachat/">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+    | <a href="donate">{%if tx.donate != ""%}{{ tx.donate }}{%else%}{{ txEn.donate }}{%endif%}</a>
     | <a href="imprint">{%if tx.imprint != ""%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
     | <a href="gdpr-website">{%if tx.privacy != ""%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
 <br>
