add winget command to download page

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -73,6 +73,8 @@
                 <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
                 &ndash;
                 <a href="https://download.delta.chat/desktop/v{{VERSION_DESKTOP}}/DeltaChat%20{{VERSION_DESKTOP}}.exe">Get portable version (experimental)</a>
+                <br />
+                Winget install: <code>winget install 9PJTXX7HN3PK</code>
             </div>
         </div>
         <div class="box" id="linux">
