fixed purify.js path

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,7 +4,7 @@
 <noscript><p>You need JavaScript to view comments here.</p></noscript>
 <a id="load-comment">Load comments</a> 
 <a href="https://chaos.social/interact/109517627964019902?=type=reply">Reply via Mastodon</a><br>
-<script src="/assets/js/purify.js"></script>
+<script src="../assets/js/purify.js"></script>
 <script>
     document.getElementById('load-comment').addEventListener("click", async () => {
         document.getElementById('load-comment').remove();
