fix jekyll bug by using innerText instead of innerHTML

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -10,15 +10,20 @@
         document.getElementById('load-comment').remove();
         const response = await fetch('https://chaos.social/api/v1/statuses/109517627964019902/context');
         const data = await response.json();
+        let commentsList = document.getElementById('comments-list');
         if (data.descendants && data.descendants.length > 0) {
-            document.getElementById('comments-list').innerHTML += "<h3>Mastodon Comments</h3>";
+	    let commentsHeadline = document.createElement('h3');
+	    commentsHeadline.innerText = 'Mastodon Comments';
+	    commentsList.appendChild(commentsHeadline);
             let descendants = data.descendants;
             for (let i = 0; i < descendants.length; i++) {
-                document.getElementById('comments-list').appendChild(DOMPurify.sanitize(createCommentEl(descendants[i]), {'RETURN_DOM_FRAGMENT': true}));
+                commentsList.appendChild(DOMPurify.sanitize(createCommentEl(descendants[i]), {'RETURN_DOM_FRAGMENT': true}));
             }
         }
         else {
-            document.getElementById('comments-list').innerHTML += "<p>⚠️ No Mastodon comments yet ⚠️</p>";
+	    let commentError = document.createElement('p');
+	    commentError.innerText = '⚠️ No Mastodon comments yet ⚠️ ';
+            commentsList.appendChild();
         }
     });
 
