--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,14 +5,8 @@
 <div id="comments-list"></div>
 <noscript><p>You need JavaScript to view comments here.</p></noscript>
 <br><br>
-<p><a id="load-comment" class="mastodon">Load comments</a></p>
-<details>
-    <summary>Reply via Fediverse</summary>
-    <p>You can reply on any Fediverse (Mastodon, Pleroma, etc.) client by pasting this URL into the search field of your client:
-        <br>
-        <pre><a href="https://{{ mastodon_instance }}/@{{ mastodon_user }}/{{ page.com_id }}">https://{{ mastodon_instance }}/@{{ mastodon_user }}/{{ page.com_id }}</a></pre>
-    </p>
-</details>
+<p><a id="load-comment" class="mastodon">Show Comments</a></p>
+
 <br>
 <script src="../assets/js/purify.js"></script>
 <script>
@@ -35,6 +29,15 @@
 	    commentError.innerText = 'No Mastodon comments yet';
             commentsList.appendChild();
         }
+	let pleaseReply = document.createElement('b');
+	pleaseReply.innerHTML = '<br>You can reply on any Fediverse (Mastodon, Pleroma, etc.) client by pasting this URL into the search field of your client:<br>';
+	let replyLinkPre = document.createElement('pre');
+	let replyLink = document.createElement('a');
+	replyLink.setAttribute('href','https://{{ mastodon_instance }}/@{{ mastodon_user }}/{{ page.com_id }}');
+	replyLink.innerText = 'https://{{ mastodon_instance }}/@{{ mastodon_user }}/{{ page.com_id }}';
+	replyLinkPre.appendChild(replyLink);
+	pleaseReply.appendChild(replyLinkPre);
+	commentsList.appendChild(pleaseReply);
     });
 
     function createCommentEl(response){
